# test-work-Aiti-Guru

./: .env  Dockerfile  README  docker-compose.yml  pyproject.toml
sql/: queries.sql  schema.sql  test_data.sql
src/: main.py
src/api/: dependencies.py  orders.py
src/core/: config.py  database.py
src/exceptions/: base.py  exceptions.py  http_exception.py
src/models/: models.py
src/repository/: base.py  order_item.py  orders.py  products.py
src/repository/mappers/: base.py  mappers.py
src/schema/: order.py  order_item.py  products.py  schemas.py
src/service/: base.py  orders.py
src/utils/: db_manager.py
