[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "KirillBels",email = "k.belskiy@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "pyright (>=1.1.405,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false